--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,22 @@ div.recipe-container {
     width: 250px;
 }
 
+.recipe-page {
+    display: flex;
+    flex-direction: column;
+    max-width: 60em;
+}
+
+.recipe-page-header {
+    display: flex;
+}
+
+.recipe-page-image {
+    background-color: #b6b6b6;
+    height: 20em;
+    min-width: 20em;
+}
+
 .image {
     background-color: #b6b6b6;
     border-bottom: #000000 2px solid;
@@ -64,19 +80,39 @@ div.recipe-container {
     background-size: cover;
 }
 
-#guac{
+#guac {
     background-image: url("https://www.allrecipes.com/thmb/cKFHrBFFmZ2ItMQ32NItV4JsPHU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14231_guacamole_Rita-1x1-1-6797bd34d19b4f88a210f2086ca1156f.jpg");
     background-size: cover;
 }
 
-#chili{
+#chili {
     background-image: url("https://www.allrecipes.com/thmb/8GA601ZF7A1hvoOBuV0k9WkUxAM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/16248_easy-homemade-chili_Rita-1x1-1-f584fa2d46e94fb99e152697a005136e.jpg");
     background-size: cover;
 }
 
-#sltdip{
+#sltdip {
     background-image: url("https://www.allrecipes.com/thmb/glaiaTmAIAgiYg4_ywEi1F02p_4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/246196-3be08f1e81124898a785c8a66588ea93.jpg");
     background-size: cover;
+}
+
+.nametag {
+    padding-left: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.instructions {
+    padding-top: 24px;
+    display: flex;
+}
+
+.ingredients {
+    min-width: 20em;
+}
+
+.steps {
+    padding-left: 12px;
 }
 
 h2 {
@@ -86,6 +122,10 @@ h2 {
 
 a {
     text-decoration: none;
+}
+
+ol, ul {
+    padding-left: 24px;
 }
 
 .details {
